--- a/module_freshman/src/main/res/layout/freshman_yt_fragment.xml
+++ b/module_freshman/src/main/res/layout/freshman_yt_fragment.xml
@@ -52,6 +52,7 @@
                       android:layout_marginLeft="15dp"
                       android:layout_marginRight="15dp"
                       android:layout_marginTop="15dp"
+                      android:layout_marginBottom="15dp"
                       android:orientation="vertical"
                       android:background="@drawable/guide_item_background"
                       android:id="@+id/ll_guide_delivery_second">
